--- a/Changes
+++ b/Changes
@@ -1,3 +1,10 @@
+1.922   2022-08-21  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+        - [doc] Fix typo in description of --log-level.
+
+
 1.921   2022-05-27  Released-By: PERLANCAR; Urgency: low
 
         - No functional changes.
