--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+1.923   2022-10-19  Released-By: PERLANCAR; Urgency: medium
+
+        - [ux] Turn off marking of different language in help message because
+          currently we don't support translation (RT#144733).
+
+        - Add usage in POD syntax to common options.
+
+        - [internal] Add devnotes.org.
+
+
 1.922   2022-08-21  Released-By: PERLANCAR; Urgency: low
 
         - No functional changes.
