--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.928   2022-11-24  Released-By: PERLANCAR; Urgency: medium
+
+        - Display error result to STDERR instead of STDOUT.
+
+
 1.927   2022-11-15  Released-By: PERLANCAR; Urgency: low
 
         - Tweak usage's POD formatting for common options.
